@@ -1427,20 +1427,20 @@
     1, , Button5, ButtonLit5, 7, 3, 4, 1, 1, 0.1, -0.1</font></p>
   <p align="left">The AddFloorButton command creates a floor button on the button 
     panel created with CreatePanel. Panel_number specifies the number of the panel 
-    to add the button to; the number can be either 1 or 2. <em>Row</em> and <em>Column</em> 
-    specify the position on the grid where the button should be. <em>Floor</em> 
-    specifies the floor number that this button calls. <em>Width</em> and <em>Height</em> 
-    specify the width and height of the button, as a percentage of a single grid 
-    unit size (1 being 100%, 0.5 being 50%). If both values are 0, the default 
-    of 1 is used for both values. If only one of the values is 0, then the exact 
-    size other is used; for example, if <em>width</em> is 0 and <em>height</em> 
-    is 1 (or any other number), then the width will end up being the same size 
-    as the height. <em>Hoffset</em> and <em>Voffset</em> are optional parameters, 
+    to add the button to. <em>Row</em> and <em>Column</em> specify the position 
+    on the grid where the button should be. <em>Floor</em> specifies the floor 
+    number that this button calls. <em>Width</em> and <em>Height</em> specify 
+    the width and height of the button, as a percentage of a single grid unit 
+    size (1 being 100%, 0.5 being 50%). If both values are 0, the default of 1 
+    is used for both values. If only one of the values is 0, then the exact size 
+    other is used; for example, if <em>width</em> is 0 and <em>height</em> is 
+    1 (or any other number), then the width will end up being the same size as 
+    the height. <em>Hoffset</em> and <em>Voffset</em> are optional parameters, 
     and are used to position the button outside the normal grid, and are in grid 
     units (buttonwidth and buttonheight parameters of the CreatePanel function). 
     In the second example, the button is positioned 0.1 grid units to the right, 
-    and 0.1 grid units down. Notice that no sound is specified in the 2nd example - this
-    means that a sound won't be played.</p>
+    and 0.1 grid units down. Notice that no sound is specified in the 2nd example 
+    - this means that a sound won't be played.</p>
   <p align="left"><strong>8. AddControlButton</strong> - creates a control button 
     on the panel<br>
     Syntax: <font size="2" face="Courier New, Courier, mono">AddControlButton 
